--- a/templates/index3.html
+++ b/templates/index3.html
@@ -12,13 +12,13 @@
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
 
-   <!-- Marker Cluster CSS -->
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
+  <!-- Marker Cluster CSS -->
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
 
-<!-- ======= Header ======= -->
- <header id="header" class="fixed-top">
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo mr-auto"><a href="/">Website 3</a></h1>
@@ -26,19 +26,19 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="/">Welcome</a></li>
-              <li><a href="national">National emissions</a></li>
-              <li><a href="bubble">State emissions overview</a></li>
-              <li><a href="chart">State by state comparision</a></li>
-              <li><a href="map">Map of EV charging stations</a></li>
+          <li><a href="national">National emissions</a></li>
+          <li><a href="bubble">State emissions overview</a></li>
+          <li><a href="chart">State by state comparision</a></li>
+          <li><a href="map">Map of EV charging stations</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
     </div>
   </header><!-- End Header -->
 
-    <!-- The div where we will inject our map -->
-    <div id="map"></div>
-  
+  <!-- The div where we will inject our map -->
+  <div id="map"></div>
+
 
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
@@ -53,19 +53,17 @@
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
-    
+
   <!-- D3 JavaScript -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
-  
-   <!-- Marker Cluster JS -->
-    <script type="text/javascript"
-        src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
 
-  <!-- API key -->
-  <script type="text/javascript" src="static/js/config.js"></script>
+  <!-- Marker Cluster JS -->
+  <script type="text/javascript"
+    src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
+
   <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="static/js/logic2.js"></script>
 </body>
 
 </html>
