--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,5 +6,13 @@ body {
 #map,
 body,
 html {
+  height: 90%;
+  width: 90%;
+}
+
+html, body, #graph-container {
+  width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
