--- a/templates/index3.html
+++ b/templates/index3.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>US Charging Stations and Emissions</title>
 
+
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -49,6 +50,9 @@
   <!-- The div that holds our map -->
   <div id="map"></div>
 
+  <!-- the dic that hold the chart -->
+  <div id="graph-container"></div>
+
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
@@ -61,6 +65,9 @@
   <!-- Marker Cluster JS -->
   <script type="text/javascript"
     src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
+
+  <!-- anyChart -->
+  <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-base.min.js"></script>
 
   <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/logic2.js"></script>
